Added the WoodScene and bind the cpp to lua

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 debug.log
 .idea/workspace.xml
 .idea/tasks.xml
-proj.win32/Debug.win32
+proj.win32/Debug
 proj.win32/CrazyIQ.opensdf
 proj.win32/CrazyIQ.sdf
 proj.win32/CrazyIQ.v11.suo
