--- a/proj.win32/crazyiq.vcxproj
+++ b/proj.win32/crazyiq.vcxproj
@@ -12,6 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\sources\AppDelegate.cpp" />
+    <ClCompile Include="..\sources\ext\ActionEaseExtension.cpp" />
+    <ClCompile Include="..\sources\ext\TransitionExtension.cpp" />
+    <ClCompile Include="..\sources\luabinding\ActionEaseExtension_luabinding.cpp" />
+    <ClCompile Include="..\sources\luabinding\TransitionExtension_luabinding.cpp" />
     <ClCompile Include="..\sources\SimulatorConfig.cpp" />
     <ClCompile Include="crazyiq.cpp" />
     <ClCompile Include="ProjectConfigDialog.cpp" />
@@ -19,6 +23,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\sources\AppDelegate.h" />
+    <ClInclude Include="..\sources\ext\ActionEaseExtension.h" />
+    <ClInclude Include="..\sources\ext\CrazyIQ.h" />
+    <ClInclude Include="..\sources\ext\TransitionExtension.h" />
+    <ClInclude Include="..\sources\luabinding\ActionEaseExtension_luabinding.h" />
+    <ClInclude Include="..\sources\luabinding\TransitionExtension_luabinding.h" />
     <ClInclude Include="..\sources\SimulatorConfig.h" />
     <ClInclude Include="crazyiq.h" />
     <ClInclude Include="ProjectConfigDialog.h" />
