Adjusted the WoodButton

--- a/proj.win32/crazyiq.vcxproj
+++ b/proj.win32/crazyiq.vcxproj
@@ -14,7 +14,10 @@
     <ClCompile Include="..\sources\AppDelegate.cpp" />
     <ClCompile Include="..\sources\ext\ActionEaseExtension.cpp" />
     <ClCompile Include="..\sources\ext\TransitionExtension.cpp" />
+    <ClCompile Include="..\sources\ext\Util.cpp" />
+    <ClCompile Include="..\sources\ext\MenuItemSpriteExtension.cpp" />
     <ClCompile Include="..\sources\luabinding\ActionEaseExtension_luabinding.cpp" />
+    <ClCompile Include="..\sources\luabinding\MenuItemSpriteExtension_luabinding.cpp" />
     <ClCompile Include="..\sources\luabinding\TransitionExtension_luabinding.cpp" />
     <ClCompile Include="..\sources\SimulatorConfig.cpp" />
     <ClCompile Include="crazyiq.cpp" />
@@ -26,7 +29,10 @@
     <ClInclude Include="..\sources\ext\ActionEaseExtension.h" />
     <ClInclude Include="..\sources\ext\CrazyIQ.h" />
     <ClInclude Include="..\sources\ext\TransitionExtension.h" />
+    <ClInclude Include="..\sources\ext\Util.h" />
+    <ClInclude Include="..\sources\ext\MenuItemSpriteExtension.h" />
     <ClInclude Include="..\sources\luabinding\ActionEaseExtension_luabinding.h" />
+    <ClInclude Include="..\sources\luabinding\MenuItemSpriteExtension_luabinding.h" />
     <ClInclude Include="..\sources\luabinding\TransitionExtension_luabinding.h" />
     <ClInclude Include="..\sources\SimulatorConfig.h" />
     <ClInclude Include="crazyiq.h" />
