--- a/proj.win32/crazyiq.vcxproj.filters
+++ b/proj.win32/crazyiq.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="..\sources\luabinding\MenuItemSpriteExtension_luabinding.cpp">
       <Filter>sources\luabinding</Filter>
     </ClCompile>
+    <ClCompile Include="..\sources\ext\WoodSwitch.cpp">
+      <Filter>sources\ext</Filter>
+    </ClCompile>
+    <ClCompile Include="..\sources\luabinding\WoodSwitch_luabinding.cpp">
+      <Filter>sources\luabinding</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -96,6 +102,12 @@
       <Filter>sources\ext</Filter>
     </ClInclude>
     <ClInclude Include="..\sources\luabinding\MenuItemSpriteExtension_luabinding.h">
+      <Filter>sources\luabinding</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sources\ext\WoodSwitch.h">
+      <Filter>sources\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sources\luabinding\WoodSwitch_luabinding.h">
       <Filter>sources\luabinding</Filter>
     </ClInclude>
   </ItemGroup>
