Removed the useless .suo file.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ proj.win32/Debug
 proj.win32/CrazyIQ.opensdf
 proj.win32/CrazyIQ.sdf
 proj.win32/CrazyIQ.v11.suo
+proj.win32/CrazyIQ.v12.suo
 proj.android/assets
 proj.android/bin
 proj.android/gen
