--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
     <uses-feature android:glEsVersion="0x00020000" />
 
     <supports-screens android:largeScreens="true"
@@ -16,9 +16,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:label="@string/app_name"
-        android:icon="@drawable/icon">
+        android:icon="@drawable/icon"
+        android:allowBackup="true">
 
-        <activity android:name=".Crazyiq"
+        <activity android:name="Crazyiq"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait"
