--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ proj.android/bin
 proj.android/gen
 proj.android/obj
 proj.android/libs
+
+.DS_Store
+*.swp
+*.lock
+profile
+*~.nib
+DerivedData/
+build/
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
